--- a/docs/src/main/asciidoc/amazon-s3.adoc
+++ b/docs/src/main/asciidoc/amazon-s3.adoc
@@ -277,7 +277,7 @@ import javax.ws.rs.core.Response.ResponseBuilder;
 import javax.ws.rs.core.Response.Status;
 import javax.ws.rs.core.StreamingOutput;
 
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 import org.jboss.resteasy.annotations.providers.multipart.MultipartForm;
 
 import software.amazon.awssdk.core.sync.RequestBody;
@@ -454,7 +454,7 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.Response.Status;
 
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 import org.jboss.resteasy.annotations.providers.multipart.MultipartForm;
 
 import io.smallrye.mutiny.Uni;
