--- a/docs/src/main/asciidoc/rest-client.adoc
+++ b/docs/src/main/asciidoc/rest-client.adoc
@@ -113,7 +113,7 @@ Using the MicroProfile REST Client is as simple as creating an interface using t
 package org.acme.rest.client;
 
 import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -192,7 +192,7 @@ Open the `src/main/java/org/acme/rest/client/CountriesResource.java` file and up
 [source,java]
 ----
 import org.eclipse.microprofile.rest.client.inject.RestClient;
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
@@ -269,7 +269,7 @@ Let's see it in action by adding a `getByNameAsync` method in our `CountriesServ
 package org.acme.rest.client;
 
 import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -300,7 +300,7 @@ Open the `src/main/java/org/acme/rest/client/CountriesResource.java` file and up
 package org.acme.rest.client;
 
 import org.eclipse.microprofile.rest.client.inject.RestClient;
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
@@ -359,7 +359,7 @@ The `Uni` version is very similar:
 package org.acme.rest.client;
 
 import org.eclipse.microprofile.rest.client.inject.RegisterRestClient;
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
@@ -387,7 +387,7 @@ The `CountriesResource` becomes:
 package org.acme.rest.client;
 
 import org.eclipse.microprofile.rest.client.inject.RestClient;
-import org.jboss.resteasy.annotations.jaxrs.PathParam;
+import io.quarkus.rest.PathParam;
 
 import javax.inject.Inject;
 import javax.ws.rs.GET;
